--- a/src/App.css
+++ b/src/App.css
@@ -1,117 +1,191 @@
-*, *::before, *::after {
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
+  font-family: Roboto;
+  font-size: medium;
 }
 
 #root {
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
+  --hue: 200;
+  --saturation: 100%;
+  --dark-color: 35%;
+  --light-color: 75%;
 }
 
 .App {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    padding: .5% 2%;
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 .sidebar {
-    background-color: lightgreen;
-    height: 100%;
-    width: 15%;
+  background-color: hsl(var(--hue), var(--saturation), var(--dark-color));
+  color: hsl(var(--hue), var(--saturation), var(--light-color));
+  border-right: thin solid
+    hsl(var(--hue), var(--saturation), var(--light-color));
+  padding: 3%;
+  height: 100%;
+  width: 15%;
 }
 
 .content {
-    height: 100%;
-    width: 85%;
+  height: 100%;
+  width: 85%;
 }
 
 .header {
-    background-color: lightgray;
-    height: 20%;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding: 1%;
-
+  height: 20%;
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 1%;
+  color: hsl(var(--hue), var(--saturation), var(--light-color));
+  border-bottom: thin solid
+    hsl(var(--hue), var(--saturation), var(--light-color));
+  background-color: hsl(var(--hue), var(--saturation), var(--dark-color));
 }
 
-.header > .header-action {
-    display: flex;
-    align-items: center;
-    gap: 15%;
-    width: 13%;
+.header .header-action {
+  display: flex;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: 2% 2% 2% 0;
+  padding: 1% 3%;
+  align-items: center;
+  gap: 15%;
+  width: fit-content;
+  background-color: inherit;
+  color: inherit;
 }
 
-.header > .timeDone {
+.header .header-action .playButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  outline: none;
+  background-color: hsl(
+    var(--hue),
+    var(--saturation),
+    calc(var(--dark-color) + 5%)
+  );
+  border: thin solid hsl(var(--hue), var(--saturation), var(--light-color));
+  color: inherit;
+  transform: scale(1);
+}
 
+.header .header-action .playButton:hover {
+  background-color: hsl(
+    var(--hue),
+    var(--saturation),
+    calc(var(--dark-color) - 5%)
+  );
+  transform: scale(1.1);
+}
+
+.header .timeDone {
+  background-color: inherit;
+  color: inherit;
 }
 
 .body {
-    display: flex;
-    background-color: lightblue;
-    height: 80%;
-    margin-bottom: 1%;
-    padding: 1.5%;
-}
-
-.playButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-    height: 40px;
-    width: 40px;
+  display: flex;
+  background-color: hsl(var(--hue), var(--saturation), 90%);
+  height: 80%;
+  margin-bottom: 1%;
+  padding: 0 1.5%;
 }
 
 .day-container {
-    min-width: 440px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 2%;
-    width: 100%;
-    height: 100%;
-    padding: 3% 1.5%;
-    overflow-y: auto;
+  min-width: 440px;
+  background-color: var(--dark-color);
+  display: flex;
+  flex-direction: column;
+  gap: 2%;
+  width: 100%;
+  height: 100%;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+  overflow-y: auto;
 }
 
-.time-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: brown;
-    width: 100%;
-    height: 15%;
-    min-height: 65px;
-    min-width: 70px;
-    padding: 2%;
+.day-container .time-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: thin solid var(--darker-color);
+  width: 100%;
+  height: 15%;
+  min-height: 65px;
+  min-width: 70px;
+  padding: 2%;
 }
 
-.time-container > .information {
-    display: flex;
-    justify-content: flex-end;
-    gap: 3%;
-    width: 60%;
+.day-container .time-container:nth-child(odd) {
+  background-color: hsl(
+    var(--hue),
+    var(--saturation),
+    calc(var(--dark-color) + 3%)
+  );
 }
 
-.time-container > .information > .begin-time,
-.time-container > .information > .end-time,
-.time-container > .information > .duration {
-    height: 100%;
-    background-color: white;
-    width: min-content;
-    padding: 1% 3%;
-    border: thin solid gray;
+.day-container .time-container:nth-child(even) {
+  background-color: hsl(
+    var(--hue),
+    var(--saturation),
+    calc(var(--dark-color) + 10%)
+  );
 }
 
+.time-container .information {
+  display: flex;
+  justify-content: flex-end;
+  gap: 3%;
+  width: 60%;
+}
 
-.time-container > .information > .description {
-    min-width: 215px;
-    width: 40%;
-    outline: none;
+.information .begin-time,
+.information .end-time,
+.information .duration {
+  height: 100%;
+  background-color: hsl(var(--hue), var(--saturation), var(--light-color));
+  border-radius: 10%;
+  user-select: none;
+  width: min-content;
+  padding: 1% 3%;
+  border: thin solid hsl(var(--hue), var(--saturation), var(--dark-color));
+}
+
+.time-container .description {
+  min-width: 215px;
+  width: 60%;
+  outline: none;
+  font-family: inherit;
+  padding-left: 1rem;
+  border-radius: 5%;
+  background-color: hsl(var(--hue), var(--saturation), var(--light-color));
+  border: thin solid hsl(var(--hue), var(--saturation), var(--dark-color));
+}
+
+.time-container .description:read-only {
+  user-select: none;
+}
+
+.time-container .description:active,
+.time-container .description:focus {
+  border: thin solid hsl(var(--hue), var(--saturation), 30%);
 }
