--- a/src/App.css
+++ b/src/App.css
@@ -162,10 +162,12 @@ body {
 .information .end-time,
 .information .duration {
   height: 100%;
+  min-height: 2rem;
   background-color: hsl(var(--hue), var(--saturation), var(--light-color));
   border-radius: 10%;
   user-select: none;
   width: min-content;
+  min-width: 3.5rem;
   padding: 1% 3%;
   border: thin solid hsl(var(--hue), var(--saturation), var(--dark-color));
 }
